--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,27 @@
 @media only screen and (min-width: 1024px) {
+  /* 데스크탑 */
   main {
     padding: 0 50px;
+  }
+  .desktop-image {
+    display: "";
+    border-radius: 4px;
+  }
+  .mobile-image {
+    display: none;
+  }
+  .responsive-container {
+    padding: 0 15%;
+    border-radius: 4px;
+  }
+}
+
+@media only screen and (max-width: 1023px) {
+  /* 모바일 */
+  .desktop-image {
+    display: none;
+  }
+  .mobile-image {
+    display: "";
   }
 }
