--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,14 @@
     display: "";
   }
 }
+@font-face {
+  font-family: "S-CoreDream-3Light";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.App {
+  font-family: "S-CoreDream-3ExtraLight";
+}
